--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 __pycache__/
 
 # Virtual environment
-venv/
+#venv/
 env/
 .venv/
 ENV/
@@ -14,7 +14,7 @@ venv.bak/
 
 # Django specific
 db.sqlite3
-media/
+#media/
 staticfiles/
 .local_settings.py
 
@@ -48,7 +48,7 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
+#lib/
 lib64/
 parts/
 sdist/
